@@ -375,6 +375,9 @@ Fixed:
   space separated list not comma separated. This fixes the format of
   the id url parameter when generated by indexargs_form. (John
   Rouillard)
+- issue2550932 - html_calendar produces templating errors for bad date
+  strings. Fixed to ignore bad date and highlight todays date in the
+  calendar popup.
 
 2016-01-11: 1.5.1
 
